Adding mock test cases for controller